--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "standard-version": "^9.5.0"
   },
   "scripts": {
-    "start": ""
+    "release": "standard-version",
+    "release-major": "standard-version --release-as major",
+    "release-minor": "standard-version --release-as minor",
+    "release-patch": "standard-version --release-as patch"
   }
 }
