feat: 增加管理的 all 接口

--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -23,7 +23,7 @@
     "prepare": "echo 'pre'",
     "prettier": "prettier -c --write \"src/**/*\"",
     "serve": "umi-serve",
-    "start": "cross-env UMI_ENV=dev umi dev",
+    "start": "cross-env MOCK=none UMI_ENV=dev umi dev",
     "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none UMI_ENV=dev umi dev",
     "start:no-mock": "cross-env MOCK=none UMI_ENV=dev umi dev",
     "start:no-ui": "cross-env UMI_UI=none UMI_ENV=dev umi dev",
