--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-card": "^1.19.0",
+    "@ant-design/pro-components": "^1.1.6",
     "@ant-design/pro-descriptions": "^1.10.0",
     "@ant-design/pro-form": "^1.64.0",
     "@ant-design/pro-layout": "^6.35.0",
@@ -60,6 +61,7 @@
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
     "omit.js": "^2.0.2",
+    "pinyin-match": "^1.2.2",
     "rc-menu": "^9.1.0",
     "rc-util": "^5.16.0",
     "react": "^17.0.0",
