feat: 基本样式（导航栏和末尾)

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dayjs": "^1.11.3",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
