--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,7 +9,10 @@
     "dayjs": "^1.11.3",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-markdown": "^8.0.3",
+    "rehype-highlight": "^5.0.2",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
