--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.3",
+    "markdown-navbar": "^1.4.3",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
