--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,6 +11,7 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-headroom": "^3.2.0",
     "react-markdown": "^8.0.3",
     "rehype-highlight": "^5.0.2",
     "remark-gfm": "^3.0.1"
@@ -19,6 +20,7 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "@types/react-headroom": "^2.2.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
