--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -7,16 +7,17 @@
   },
   "dependencies": {
     "dayjs": "^1.11.3",
+    "headroom.js": "^0.12.0",
     "markdown-navbar": "^1.4.3",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-headroom": "^3.2.0",
     "react-markdown": "^8.0.3",
     "rehype-highlight": "^5.0.2",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@types/headroom.js": "^0.12.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
