--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,7 +13,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
-    "rehype-highlight": "^5.0.2",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
@@ -22,6 +22,7 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "@types/react-headroom": "^2.2.2",
+    "@types/react-syntax-highlighter": "^15.5.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
