--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,15 +11,18 @@
     "markdown-navbar": "^1.4.3",
     "next": "latest",
     "react": "18.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "sweetalert2": "^11.4.23"
   },
   "devDependencies": {
     "@types/headroom.js": "^0.12.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
+    "@types/react-copy-to-clipboard": "^5.0.3",
     "@types/react-dom": "18.0.5",
     "@types/react-headroom": "^2.2.2",
     "@types/react-syntax-highlighter": "^15.5.3",
