feat: 基本完善首页

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -10,6 +10,7 @@
     "headroom.js": "^0.12.0",
     "markdown-navbar": "^1.4.3",
     "next": "latest",
+    "rc-pagination": "^3.1.17",
     "react": "18.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0",
