--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@types/markdown-navbar": "^1.4.0",
+    "@waline/client": "^2.6.1",
     "dayjs": "^1.11.3",
     "headroom.js": "^0.12.0",
     "markdown-navbar": "^1.4.3",
