--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -17,6 +17,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
+    "react-scroll": "^1.8.7",
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
@@ -29,6 +30,7 @@
     "@types/react-copy-to-clipboard": "^5.0.3",
     "@types/react-dom": "18.0.5",
     "@types/react-headroom": "^2.2.2",
+    "@types/react-scroll": "^1.8.3",
     "@types/react-syntax-highlighter": "^15.5.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
