feat: 移动端滑动菜单框架

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "rc-pagination": "^3.1.17",
     "react": "18.1.0",
+    "react-burger-menu": "^3.0.8",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
@@ -27,6 +28,7 @@
     "@types/headroom.js": "^0.12.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-copy-to-clipboard": "^5.0.3",
     "@types/react-dom": "18.0.5",
     "@types/react-headroom": "^2.2.2",
