--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -20,6 +20,7 @@
     "react-markdown": "^8.0.3",
     "react-scroll": "^1.8.7",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tiny-popover": "^7.1.0",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
     "sweetalert2": "^11.4.23"
