--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -22,7 +22,10 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-tiny-popover": "^7.1.0",
     "react-use": "^17.4.0",
+    "rehype-katex": "^6.0.2",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "sweetalert2": "^11.4.23"
   },
   "devDependencies": {
