--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001 --hostname 0.0.0.0",
+    "dev": "cross-env NODE_ENV=development next dev -p 3001 --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start"
   },
@@ -39,6 +39,7 @@
     "@types/react-scroll": "^1.8.3",
     "@types/react-syntax-highlighter": "^15.5.3",
     "autoprefixer": "^10.4.7",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
