feat:增加前台打包’

--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -25,6 +25,7 @@ COPY . .
 # Uncomment the following line in case you want to disable telemetry during the build.
 # ENV NEXT_TELEMETRY_DISABLED 1
 
+ENV isBuild=t
 RUN yarn build
 
 # If using npm comment out above and use below instead
