--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -54,8 +54,8 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
-EXPOSE 3000
+EXPOSE 3001
 
-ENV PORT 3000
+ENV PORT 3001
 
-CMD ["node", "server.js"]
+CMD ["node", "server.js","-p","3001"]
