fadmineat: 完善出一个可以用的打包编排

--- a/packages/admin/default.conf
+++ b/packages/admin/default.conf
@@ -10,12 +10,9 @@ server {
 
     root /usr/share/nginx/html;
 
-    location / {
-        # 用于配合 browserHistory使用
-        try_files $uri $uri/index.html /index.html;
-
-        # 如果有资源，建议使用 https + http2，配合按需加载可以获得更好的体验
-        # rewrite ^/(.*)$ https://preview.pro.ant.design/$1 permanent;
-
-    }
+    location ^~ /admin{
+                alias /usr/share/nginx/html/admin;
+                index index.html;
+                try_files $uri $uri/ /admin/index.html;
+        }
 }
