--- a/packages/admin/Dockerfile
+++ b/packages/admin/Dockerfile
@@ -1,7 +1,7 @@
 FROM circleci/node:latest-browsers as BUILD_IMAGE
 ENV NODE_OPTIONS=--max_old_space_size=4096
 WORKDIR /usr/src/app
-RUN yarn config set registry https://registry.npm.taobao.org
+# RUN yarn config set registry https://registry.npm.taobao.org
 COPY package.json ./
 RUN yarn
 COPY ./ ./
@@ -12,6 +12,7 @@ RUN yarn build
 
 FROM nginx
 WORKDIR /usr/share/nginx/html/
-COPY --from=BUILD_IMAGE /usr/src/app/dist/ ./
+RUN mkdir admin
+COPY --from=BUILD_IMAGE /usr/src/app/dist/ ./admin/
 COPY default.conf /etc/nginx/conf.d/
 EXPOSE 3002
