--- a/packages/proxy/default-docker.conf
+++ b/packages/proxy/default-docker.conf
@@ -20,22 +20,24 @@ server {
     proxy_buffers 8 32k;
     proxy_buffer_size 64k;
 
+
+
     location /admin {
-        proxy_pass http://localhost:3002;
+        proxy_pass http://admin:3002;
         # proxy_http_version 1.1;
         # proxy_set_header X-Forwarded-Host $host;
         # proxy_set_header X-Forwarded-Server $host;
-        # proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Real-IP $remote_addr;
         # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto $scheme;
         # proxy_set_header Host $http_host;
         # proxy_set_header Host $host:443;
-        # proxy_set_header Upgrade $http_upgrade;
-        # proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
         # index  index.html index.htm;
     }
     location / {
-        proxy_pass http://localhost:3001;
+        proxy_pass http://website:3001;
         # proxy_http_version 1.1;
         # proxy_set_header X-Forwarded-Host $host;
         # proxy_set_header X-Forwarded-Server $host;
@@ -48,7 +50,7 @@ server {
         # index  index.html index.htm;
     }
     location /api {
-      proxy_pass http://localhost:3000;
+      proxy_pass http://server:3000;
         # proxy_http_version 1.1;
         # proxy_set_header X-Forwarded-Host $host;
         # proxy_set_header X-Forwarded-Server $host;
