--- a/packages/proxy/default.conf
+++ b/packages/proxy/default.conf
@@ -1,5 +1,3 @@
-
-
 map $http_upgrade $connection_upgrade {
 default upgrade;
 '' close;
@@ -21,7 +19,7 @@ server {
     proxy_buffer_size 64k;
 
     location /admin {
-        proxy_pass http://localhost:3002;
+        proxy_pass http://admin_host;
         # proxy_http_version 1.1;
         # proxy_set_header X-Forwarded-Host $host;
         # proxy_set_header X-Forwarded-Server $host;
@@ -35,7 +33,7 @@ server {
         # index  index.html index.htm;
     }
     location / {
-        proxy_pass http://localhost:3001;
+        proxy_pass http://website_host;
         # proxy_http_version 1.1;
         # proxy_set_header X-Forwarded-Host $host;
         # proxy_set_header X-Forwarded-Server $host;
@@ -48,7 +46,7 @@ server {
         # index  index.html index.htm;
     }
     location /api {
-      proxy_pass http://localhost:3000;
+      proxy_pass http://server_host;
         # proxy_http_version 1.1;
         # proxy_set_header X-Forwarded-Host $host;
         # proxy_set_header X-Forwarded-Server $host;
