--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -60,5 +60,7 @@ USER nextjs
 EXPOSE 3001
 
 ENV PORT 3001
-
+ENV VAN_BLOG_SERVER_URL server:3000
+ENV VAN_BLOG_REVALIDATE_TIME 10
+ENV VAN_BLOG_ALLOW_DOMAINS ""
 CMD ["node", "server.js","-p","3001"]
