--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -27,6 +27,7 @@ COPY . .
 
 ENV isBuild=t
 ENV VAN_BLOG_REVALIDATE_TIME=10
+ENV VAN_BLOG_ALLOW_DOMAINS "pic.mereith.com"
 RUN yarn build
 
 # If using npm comment out above and use below instead
@@ -62,5 +63,5 @@ EXPOSE 3001
 ENV PORT 3001
 ENV VAN_BLOG_SERVER_URL server:3000
 ENV VAN_BLOG_REVALIDATE_TIME 10
-ENV VAN_BLOG_ALLOW_DOMAINS ""
+ENV VAN_BLOG_ALLOW_DOMAINS "pic.mereith.com"
 CMD ["node", "server.js","-p","3001"]
