--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -54,7 +54,7 @@ COPY --from=builder /app/package.json ./package.json
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
-RUN yarn add sharp
+# RUN yarn add sharp
 
 USER nextjs
 
