--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,7 +27,9 @@
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^5.2.1",
+    "dayjs": "^1.11.4",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.4",
     "passport": "^0.6.0",
