--- a/default.conf
+++ b/default.conf
@@ -24,7 +24,7 @@ server {
                 try_files $uri $uri/ /admin/index.html;
         }
     location / {
-        proxy_pass http://localhost:3001;
+        proxy_pass http://127.0.0.1:3001;
         # proxy_http_version 1.1;
         # proxy_set_header X-Forwarded-Host $host;
         # proxy_set_header X-Forwarded-Server $host;
@@ -37,7 +37,7 @@ server {
         # index  index.html index.htm;
     }
     location /api {
-      proxy_pass http://locallhost:3000;
+      proxy_pass http://127.0.0.1:3000;
         # proxy_http_version 1.1;
         # proxy_set_header X-Forwarded-Host $host;
         # proxy_set_header X-Forwarded-Server $host;
