--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "private": true,
   "devDependencies": {
     "lerna": "^4.0.0",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "@vuepress/client": "^2.0.0-beta.49",
+    "vue": "^3.2.36",
+    "vuepress": "^2.0.0-beta.49",
+    "vuepress-theme-hope": "^2.0.0-beta.87"
   },
   "scripts": {
     "release": "standard-version",
     "release-major": "standard-version --release-as major",
     "release-minor": "standard-version --release-as minor",
-    "release-patch": "standard-version --release-as patch"
+    "release-patch": "standard-version --release-as patch",
+    "docs:build": "vuepress build docs",
+    "docs:clean-dev": "vuepress dev docs --clean-cache",
+    "docs:dev": "vuepress dev docs"
   }
 }
