--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -15,6 +15,11 @@ jobs:
           fetch-depth: 0
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
+      - name: Get version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: 展示版本
+        run: echo ${{ steps.get_version.outputs.VERSION }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
@@ -53,12 +58,12 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            "registry.cn-beijing.aliyuncs.com/mereith/van-blog:docs-${{ github.ref }}"
+            "registry.cn-beijing.aliyuncs.com/mereith/van-blog:docs-${{ steps.get_version.outputs.VERSION }}"
       - name: 部署到集群
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.K8S_CONFIG_DATA }}
-          command: set image -n tools deployment/vanblog-doc vanblog-doc=registry.cn-beijing.aliyuncs.com/mereith/van-blog:docs-${{ github.ref }}
+          command: set image -n tools deployment/vanblog-doc vanblog-doc=registry.cn-beijing.aliyuncs.com/mereith/van-blog:docs-${{ steps.get_version.outputs.VERSION }}
       - name: send Message To me
         run: |
           curl -X POST -H "Content-Type: application/json" -d '{"source":"github-ci:van-blog-doc","message":"流水线运行完毕，文档已部署。
