--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,8 +53,10 @@ jobs:
             "docker.io/mereith/van-blog:latest"
             "registry.cn-beijing.aliyuncs.com/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}"
             "registry.cn-beijing.aliyuncs.com/mereith/van-blog:latest"
-      - name: Bump version
-        uses: qzb/standard-version@v1.0.5
+      - name: standard version
+        run: |
+          yarn
+          yarn release && git push --follow-tags
       - name: Release
         uses: softprops/action-gh-release@v1
       - name: 打包镜像并推送（自用）
