ci: 更新默认后端参数

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,8 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
+          build-args: |
+            VAN_BLOG_BUILD_SERVER=http://localhost:3000
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
