fix: nginx 301 带端口问题

--- a/default.conf
+++ b/default.conf
@@ -17,8 +17,8 @@ server {
     root /usr/share/nginx/html;
     proxy_buffers 8 32k;
     proxy_buffer_size 64k;
-
-    location ^~ /admin{
+    absolute_redirect off;
+    location /admin {
                 alias /usr/share/nginx/html/admin;
                 index index.html;
                 try_files $uri $uri/ /admin/index.html;
