fix: 根目录误引入依赖

--- a/package.json
+++ b/package.json
@@ -20,7 +20,5 @@
     "docs:clean-dev": "vuepress dev docs --clean-cache",
     "docs:dev": "vuepress dev docs"
   },
-  "dependencies": {
-    "@ant-design/plots": "^1.2.1"
-  }
+  "dependencies": {}
 }
