feat: 增加版本展示

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,7 @@ jobs:
           file: ./Dockerfile
           build-args: |
             VAN_BLOG_BUILD_SERVER=http://localhost:3000
+            VAN_BLOG_VERSION=${{ steps.get_version.outputs.VERSION }}
           platforms: linux/amd64
           push: true
           tags: |
