--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -67,6 +67,7 @@
     "rc-resize-observer": "^1.2.0",
     "rc-util": "^5.16.0",
     "react": "^17.0.0",
+    "react-contexify": "^5.0.0",
     "react-dev-inspector": "^1.7.0",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
