--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^5.2.1",
+    "axios": "^0.27.2",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.4",
     "image-size": "^1.0.2",
