--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,6 +16,7 @@
     "react-burger-menu": "^3.0.8",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.1.0",
+    "react-hot-toast": "^2.3.0",
     "react-markdown": "^8.0.3",
     "react-scroll": "^1.8.7",
     "react-syntax-highlighter": "^15.5.0",
