--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -25,7 +25,8 @@
     "rehype-katex": "^6.0.2",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1"
+    "remark-math": "^5.1.1",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@types/headroom.js": "^0.12.2",
