--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.1.0",
     "react-hot-toast": "^2.3.0",
     "react-markdown": "^8.0.3",
+    "react-photo-view": "^1.2.2",
     "react-scroll": "^1.8.7",
     "react-syntax-highlighter": "^15.5.0",
     "react-tiny-popover": "^7.1.0",
