--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -2,13 +2,25 @@ version: "3"
 
 services:
   vanblog:
+    # 默认国内原的
     image: registry.cn-beijing.aliyuncs.com/mereith/van-blog:latest
+    # image: mereith/van-blog:latest
     restart: always
     environment:
       TZ: "Asia/Shanghai"
-      VAN_BLOG_ALLOW_DOMAINS: "pic.mereith.com" # 英文逗号分隔
+      # 图片资源允许的域名，英文逗号分隔
+      VAN_BLOG_ALLOW_DOMAINS: "pic.mereith.com"
+      # CDN URL，包含协议，部署到 cdn 的时候用。
+      VAN_BLOG_CDN_URL: "https://www.mereith.com"
+      # mongodb 的地址
       VAN_BLOG_DATABASE_URL: "mongodb://vanBlog:vanBlog@mongo:27017"
+      # jwt 密钥，随机字符串即可
       VAN_BLOG_JWT_SECRET: "AnyString"
+    volumes:
+      # 图床文件的存放地址，按需修改。
+      - ${PWD}/data/static:/app/static
+    ports:
+      - 80:80
   mongo:
     image: mongo
     restart: always
