--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,7 +81,7 @@ jobs:
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.K8S_CONFIG_DATA }}
-          command: set image -n tools deployment/blog-demo van-blog=registry.cn-beijing.aliyuncs.com/van-blog/mereith:${{ steps.get_version.outputs.VERSION }}
+          command: set image -n tools deployment/blog-demo van-blog=registry.cn-beijing.aliyuncs.com/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}
       - name: updateVersionToApiServer
         run: |
           curl -X POST "${{ secrets.VERSIONURL }}${{ steps.get_version.outputs.VERSION }}"
