fix: 尝试修复构建后后台切换页面报错

--- a/packages/admin/src/manifest.json
+++ b/packages/admin/src/manifest.json
@@ -2,7 +2,7 @@
   "name": "Van Blog Admin",
   "short_name": "Van Blog Admin",
   "display": "standalone",
-  "start_url": "./",
+  "start_url": "/admin",
   "theme_color": "#002140",
   "background_color": "#001529",
   "icons": [
