--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,6 @@ node_modules/
 docs/.vuepress/.cache/
 docs/.vuepress/.temp/
 docs/.vuepress/dist/
-yarn.lock
+# yarn.lock
 temp.json
 staticFolder
