--- a/default.conf
+++ b/default.conf
@@ -49,4 +49,17 @@ server {
         proxy_set_header Connection $connection_upgrade;
         # proxy_pass_request_headers on;
     }
+    location /static {
+      proxy_pass http://127.0.0.1:3000;
+        # proxy_http_version 1.1;
+        # proxy_set_header X-Forwarded-Host $host;
+        # proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        # proxy_set_header Host $http_host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        # proxy_pass_request_headers on;
+    }
 }
