--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,40 @@ jobs:
             "registry.cn-beijing.aliyuncs.com/mereith/van-blog:latest"
       - name: Release
         uses: softprops/action-gh-release@v1
+      - name: updateVersionToApiServer
+        run: |
+          curl -X POST "${{ secrets.VERSIONURL }}${{ steps.get_version.outputs.VERSION }}"
+  release-self:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Configure committer
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+      - name: Get version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: 展示版本
+        run: echo ${{ steps.get_version.outputs.VERSION }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to AliyunCS
+        uses: docker/login-action@v1
+        with:
+          registry: registry.cn-beijing.aliyuncs.com
+          username: ${{ secrets.ALI_USER  }}
+          password: ${{ secrets.ALI_PASSWORD  }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
       - name: 打包镜像并推送（自用）
         uses: docker/build-push-action@v3
         with:
@@ -72,20 +106,57 @@ jobs:
           push: true
           tags: |
             "registry.cn-beijing.aliyuncs.com/van-blog/mereith:${{ steps.get_version.outputs.VERSION }}"
-      - name: updateVersionToApiServer
-        run: |
-          curl -X POST "${{ secrets.VERSIONURL }}${{ steps.get_version.outputs.VERSION }}"
       - name: 部署到集群
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.K8S_CONFIG_DATA }}
           command: set image -n tools deployment/van-blog van-blog=registry.cn-beijing.aliyuncs.com/van-blog/mereith:${{ steps.get_version.outputs.VERSION }}
+  release-demo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Configure committer
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+      - name: Get version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: 展示版本
+        run: echo ${{ steps.get_version.outputs.VERSION }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to AliyunCS
+        uses: docker/login-action@v1
+        with:
+          registry: registry.cn-beijing.aliyuncs.com
+          username: ${{ secrets.ALI_USER  }}
+          password: ${{ secrets.ALI_PASSWORD  }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
+      - name: 打包镜像并推送（demo）
+        uses: docker/build-push-action@v3
+        with:
+          build-args: |
+            VAN_BLOG_BUILD_SERVER=https://blog-demo.mereith.com
+            VAN_BLOG_VERSIONS=${{ steps.get_version.outputs.VERSION }}
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: |
+            "registry.cn-beijing.aliyuncs.com/van-blog/mereith:demo${{ steps.get_version.outputs.VERSION }}"
+
       - name: 部署 demo 到集群
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.K8S_CONFIG_DATA }}
-          command: set image -n tools deployment/blog-demo van-blog=registry.cn-beijing.aliyuncs.com/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}
-
-      # - name: send Message To me
-      #   run: |
-      #     curl -X POST -H "Content-Type: application/json" -d '{"source":"github-ci:van-blog-release","message":"流水线运行完毕，${{ steps.get_version.outputs.VERSION }} 已部署"}' ${{ secrets.WEBHOOK_URL }}
+          command: set image -n tools deployment/blog-demo van-blog=registry.cn-beijing.aliyuncs.com/van-blog/mereith:demo${{ steps.get_version.outputs.VERSION }}
