fix: 全称标题过长导致在微信电脑浏览器中侧边栏标题换行

--- a/packages/admin/src/manifest.json
+++ b/packages/admin/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Van Blog Admin",
-  "short_name": "Van Blog Admin",
+  "name": "VanBlog",
+  "short_name": "VanBlog",
   "display": "standalone",
   "start_url": "/admin",
   "theme_color": "#002140",
