--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,16 +29,19 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^5.2.1",
+    "@types/line-reader": "^0.0.34",
     "axios": "^0.27.2",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.4",
     "image-size": "^1.0.2",
+    "line-reader": "^0.4.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "picgo": "^1.5.0-alpha.0",
+    "pino": "^8.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
