--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,8 +9,8 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "DEV=true nest start",
+    "start:dev": "DEV=true nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -30,6 +30,7 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^5.2.1",
     "@types/line-reader": "^0.0.34",
+    "@waline/vercel": "^1.19.3",
     "axios": "^0.27.2",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.4",
