fix: 因为反代 waline 加路径前缀会出现功能不正常，所以在没路径冲突的前提下，把内嵌 waline 的 uri 直接反代到根级别了

--- a/Caddyfile
+++ b/Caddyfile
@@ -22,9 +22,25 @@
 		output file /var/log/vanblog-access.log
 		format json
 	}
+  handle /ui* {
+    reverse_proxy 127.0.0.1:8360
+  }
+  handle /user* {
+    reverse_proxy 127.0.0.1:8360
+  }
+  handle /token* {
+    reverse_proxy 127.0.0.1:8360
+  }
+  handle /db* {
+    reverse_proxy 127.0.0.1:8360
+  }
   handle /comment* {
-		reverse_proxy 127.0.0.1:8360
-	}
+    reverse_proxy 127.0.0.1:8360
+  }
+  handle /oauth* {
+    reverse_proxy 127.0.0.1:8360
+  }
+
 	handle /static/* {
 		reverse_proxy 127.0.0.1:3000
 	}
