docs: 切换成 dockerbub 源(aliyun 的被限流了)

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -2,9 +2,7 @@ version: "3"
 
 services:
   vanblog:
-    # 默认国内原的
-    image: registry.cn-beijing.aliyuncs.com/mereith/van-blog:latest
-    # image: mereith/van-blog:latest
+    image: mereith/van-blog:latest
     restart: always
     environment:
       TZ: "Asia/Shanghai"
@@ -33,8 +31,7 @@ services:
       - 80:80
       - 443:443
   mongo:
-    image: registry.cn-beijing.aliyuncs.com/mereith/van-blog:mongo
-    # image: mongo
+    image: mongo
     restart: always
     environment:
       TZ: "Asia/Shanghai"
