fix: 作者logo无法正常显示

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     restart: always
     environment:
       TZ: "Asia/Shanghai"
-      # 图片资源允许的域名，英文逗号分隔
-      VAN_BLOG_ALLOW_DOMAINS: "pic.mereith.com"
-      # CDN URL，包含协议，部署到 cdn 的时候用。
-      VAN_BLOG_CDN_URL: "https://www.mereith.com"
+      # 图片资源允许的域名，英文逗号分隔。作者 logo 加载不出来请检查此项。
+      VAN_BLOG_ALLOW_DOMAINS: "www.mereith.com"
+      # CDN URL，包含协议，部署到 cdn 的时候用。在开启 cdn 之前请不要设置此项。
+      # VAN_BLOG_CDN_URL: "https://www.mereith.com"
       # mongodb 的地址
       VAN_BLOG_DATABASE_URL: "mongodb://vanBlog:vanBlog@mongo:27017"
       # jwt 密钥，随机字符串即可
