--- a/Caddyfile
+++ b/Caddyfile
@@ -22,6 +22,13 @@
 		output file /var/log/vanblog-access.log
 		format json
 	}
+  header {
+    Host {host}
+    X-Real-IP {remote}
+    X-Forwarded-For {remote}
+    REMOTE-HOST  {remote}
+    X-Forwarded-Proto {scheme}
+  }
   handle /ui* {
     reverse_proxy 127.0.0.1:8360
   }
