--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ permissions:
   contents: write
 
 jobs:
-  release:
+  release-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,7 +21,7 @@ jobs:
           git config user.email "<>"
       - name: Get version
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        run: echo ::set-output name=VERSION::test
       - name: 展示版本
         run: echo ${{ steps.get_version.outputs.VERSION }}
       - name: Set up QEMU
