--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,12 +37,12 @@ jobs:
           registry: registry.cn-beijing.aliyuncs.com
           username: ${{ secrets.ALI_USER  }}
           password: ${{ secrets.ALI_PASSWORD  }}
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: 打包镜像并推送
         uses: docker/build-push-action@v2
         with:
@@ -51,7 +51,7 @@ jobs:
           build-args: |
             VAN_BLOG_BUILD_SERVER=http://localhost:3000
             VAN_BLOG_VERSIONS=${{ steps.get_version.outputs.VERSION }}
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             "docker.io/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}"
@@ -63,100 +63,13 @@ jobs:
       - name: updateVersionToApiServer
         run: |
           curl -X POST "${{ secrets.VERSIONURL }}${{ steps.get_version.outputs.VERSION }}"
-  release-self:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Configure committer
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-      - name: Get version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-      - name: 展示版本
-        run: echo ${{ steps.get_version.outputs.VERSION }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to AliyunCS
-        uses: docker/login-action@v1
-        with:
-          registry: registry.cn-beijing.aliyuncs.com
-          username: ${{ secrets.ALI_USER  }}
-          password: ${{ secrets.ALI_PASSWORD  }}
-      - name: Release
-        uses: softprops/action-gh-release@v1
-      - name: 打包镜像并推送（自用）
-        uses: docker/build-push-action@v3
-        with:
-          build-args: |
-            VAN_BLOG_BUILD_SERVER=https://www.mereith.com
-            VAN_BLOG_VERSIONS=${{ steps.get_version.outputs.VERSION }}
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: true
-          tags: |
-            "registry.cn-beijing.aliyuncs.com/van-blog/mereith:${{ steps.get_version.outputs.VERSION }}"
       - name: 部署到集群
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.K8S_CONFIG_DATA }}
-          command: set image -n tools deployment/van-blog van-blog=registry.cn-beijing.aliyuncs.com/van-blog/mereith:${{ steps.get_version.outputs.VERSION }}
-  release-demo:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Configure committer
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-      - name: Get version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-      - name: 展示版本
-        run: echo ${{ steps.get_version.outputs.VERSION }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to AliyunCS
-        uses: docker/login-action@v1
-        with:
-          registry: registry.cn-beijing.aliyuncs.com
-          username: ${{ secrets.ALI_USER  }}
-          password: ${{ secrets.ALI_PASSWORD  }}
-      - name: Release
-        uses: softprops/action-gh-release@v1
-      - name: 打包镜像并推送（demo）
-        uses: docker/build-push-action@v3
-        with:
-          build-args: |
-            VAN_BLOG_BUILD_SERVER=https://blog-demo.mereith.com
-            VAN_BLOG_VERSIONS=${{ steps.get_version.outputs.VERSION }}
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: true
-          tags: |
-            "registry.cn-beijing.aliyuncs.com/van-blog/mereith:demo${{ steps.get_version.outputs.VERSION }}"
-
+          command: set image -n tools deployment/van-blog van-blog=registry.cn-beijing.aliyuncs.com/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}
       - name: 部署 demo 到集群
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.K8S_CONFIG_DATA }}
-          command: set image -n tools deployment/blog-demo van-blog=registry.cn-beijing.aliyuncs.com/van-blog/mereith:demo${{ steps.get_version.outputs.VERSION }}
+          command: set image -n tools deployment/blog-demo van-blog=registry.cn-beijing.aliyuncs.com/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}
