--- a/packages/admin/Dockerfile
+++ b/packages/admin/Dockerfile
@@ -1,12 +1,13 @@
 FROM circleci/node:latest-browsers as BUILD_IMAGE
 ENV NODE_OPTIONS=--max_old_space_size=4096
 WORKDIR /usr/src/app
+RUN yarn global add umi
 # RUN yarn config set registry https://registry.npm.taobao.org
-COPY package.json ./
-RUN yarn
 COPY ./ ./
 ENV NODE_OPTIONS='--max_old_space_size=4096 --openssl-legacy-provider'
 ENV EEE=production
+USER root
+RUN yarn
 RUN yarn build
 
 FROM nginx
