--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: release
+name: test
 
 on:
   push:
@@ -8,7 +8,7 @@ permissions:
   contents: write
 
 jobs:
-  release-test:
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,31 +21,27 @@ jobs:
           git config user.email "<>"
       - name: Get version
         id: get_version
-        run: echo ::set-output name=VERSION::test
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: 展示版本
         run: echo ${{ steps.get_version.outputs.VERSION }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-
+      - name: Login to AliyunCS
+        uses: docker/login-action@v1
+        with:
+          registry: registry.cn-beijing.aliyuncs.com
+          username: ${{ secrets.ALI_USER  }}
+          password: ${{ secrets.ALI_PASSWORD  }}
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: 打包镜像并推送
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          build-args: |
-            VAN_BLOG_BUILD_SERVER=http://localhost:3000
-            VAN_BLOG_VERSIONS=${{ steps.get_version.outputs.VERSION }}
-          platforms: linux/arm64
-          push: true
-          tags: |
-            "docker.io/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}"
+      - name: sync-to-aliyuncs
+        run: |
+          docker pull docker.io/mereith/van-blog:latest
+          docker tag "docker.io/mereith/van-blog:latest" "registry.cn-beijing.aliyuncs.com/mereith/van-blog:test"
+          docker push "registry.cn-beijing.aliyuncs.com/mereith/van-blog:test"
